--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,16 @@
 # misc
 .DS_Store
 *.pem
+.vscode
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
+# env files
+.env
 
 # vercel
 .vercel
